_archive/hydra/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydra
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: download-box
spec:
  ingressClassName: internal
  rules:
    - host: "hydra.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydra
                port:
                  number: 5076
  tls:
    - hosts:
        - "hydra.${SECRET_DOMAIN}"
